2008-12-15  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-task-shortcut.c (hd_task_shortcut_realize, rounded_rectangle,
	  hd_task_shortcut_expose_event, hd_task_shortcut_class_init,
	  hd_task_shortcut_init): Use nicer transparent background for task
	  shortcuts.

2008-12-12  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-change-background-dialog.c (response_cb):
	* src/hd-hildon-home-dbus.c (select_applets_clicked_cb,
	  select_shortcuts_clicked_cb, select_bookmarks_clicked_cb,
	  select_contacts_clicked_cb, manage_views_clicked_cb): Pointer grab
	  and ungrab for system modal dialogs is done in HDCompMgr now.

2008-12-12  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/Makefile.am:
	* src/home-w50.plugins:
	* src/home.conf.in:
	* src/home.plugins.in: xmas workaround (fix around
	  mediaplayerhomeapplet bug).

	* src/hd-hildon-home-dbus.c (hd_hildon_home_dbus_show_edit_menu):
	  fix comment.

2008-12-11  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-activate-views-dialog.c:
	* src/hd-activate-views-dialog.h: Implement "Activate views" dialog (gtk
	  version).

	* src/Makefile.am: Add hd-activate-views-dialog.[ch] to sources.

	* src/hd-hildon-home-dbus.c (manage_views_clicked_cb): Use "Activate
	  views" dialog

2008-12-11  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-change-background-dialog.c (response_cb,
	  hd_change_background_dialog_append_backgrounds,
	  hd_change_background_dialog_init): Fix for new themes directory
	  layout. Fix for new bg iamge gconf paths.

2008-12-10  Jan Arne Petersen  <jpetersen@openismus.com>

	* debian/changelog: Update changelog.

	* src/hd-notification-manager.c (hd_notification_manager_notify): Do
	  not assert that an icon is set. Fixes NB#94962

2008-12-10  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-change-background-dialog.c
	  (hd_change_background_dialog_dispose): Unref proxy.
	  (hd_change_background_dialog_set_property,